Fix kernel name

--- a/tutorials/Titanic_Basic_Interpret.ipynb
+++ b/tutorials/Titanic_Basic_Interpret.ipynb
@@ -803,9 +803,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "captumEnv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "captumenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
